--- a/doc/documentation.tex
+++ b/doc/documentation.tex
@@ -103,7 +103,8 @@
 
 % Add an abstract for this thorn's documentation
 \begin{abstract}
-This thorn provides access to the SGRID solver.
+This thorn provides the SGRID library, which can be used to read binary
+neutron star initial data produced by SGRID.
 \end{abstract}
 
 % The following sections are suggestive only.
