--- a/README
+++ b/README
@@ -1,7 +1,7 @@
 Cactus Code Thorn SGRID
 Author(s)    : Roland Haas
 Maintainer(s): Wolfgang Tichy, Michal Pirog
-License      : TBD
+License      : GPL
 --------------------------------------------------------------------------
 
 1. Purpose
