--- a/README
+++ b/README
@@ -16,5 +16,5 @@ In order to use SGRID's initial data in Cactus, we need to interpolate from
 SGRID's grid to the grid points that Cactus is using. The SGRID library
 distributed here, contains functions that can perform interpolation onto
 arbitrary points. Note however, that one also needs the Cactus thorn DNSdata
-to actually read initial data. The DNSdata thorn will use functions inside
-the SGRID library to set up initial data for Cactus.
+to actually read initial data. The DNSdata thorn will call functions from
+inside the SGRID library to set up initial data for Cactus.
